testsuite/tests/properties/invalid_enum_nodes/common.lkt
from lexer_example import foo_lexer
from test import Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(or(
        | OpKind.Foo("+")
        | OpKind.Bar("-")
        | Example(@Example)
    ))
}

class FooNode implements Node[FooNode] {
}

enum class OpKind: FooNode {
    case Foo, Bar

    @exported fun to_int(): Int = match node {
        case _: OpKind.Foo => 10
        case _: OpKind.Bar => 20
    }
}
